--- a/index.html
+++ b/index.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>startpage</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
     <div id="container">
+        <div id="image">
+            <img src="mountain-sketches-clip-art-7.png" width="300">
+        </div>
         <div id="search-box">
-            <form method="get" name="search" action="https://www.google.com/search">
-                    <input type="text" autofocus="autofocus" name="q" \>
-                </form>
+            <form method="get" name="search" action="https://www.duckduckgo.com/"
+                onsubmit="this.submit(); this.reset(); return false;">
+                <input type="text" placeholder="Search DuckDuckGo" autofocus="autofocus" name="q" />
+            </form>
         </div>
         <div id="link-container">
             <div class="links">
-                <ul>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                </ul>
+                <div class="title">Productive</div>
+                <a href="https://leetcode.com/">leetcode</a>
+                <a href="https://freecodecamp.org">freecodecamp</a>
+                <a href="https://github.com/marcocanto">github</a>
+                <a href="https://linkedin.com/marcocanto3">linkedin</a>
             </div>
             <div class="links">
-                <ul>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                </ul>
+                <div class="title">School</div>
+                <a href="https://canvas.eee.uci.edu/">canvas</a>
+                <a href="https://drive.google.com/">drive</a>
+                <a href="https://www.ics.uci.edu/~givargis/courses/cs145/">cs145</a>
+                <a href="https://www.ics.uci.edu/~wayne/courses/cs146/">cs146</a>
             </div>
             <div class="links">
-                <ul>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                </ul>
+                <div class="title">Social</div>
+                <a href="https://youtube.com">youtube</a>
+                <a href="https://twitch.tv/following">twitch</a>
+                <a href="https://reddit.com/r/superstonk">reddit</a>
+                <a href="https://linkedin.com/marcocanto3">linkedin</a>
             </div>
             <div class="links">
-                <ul>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                    <li><a href="http://reddit.com/r/superstonk">reddit</a></li>
-                </ul>
+                <div class="title">Productive</div>
+                <a href="https://leetcode.com/">leetcode</a>
+                <a href="https://freecodecamp.org">freecodecamp</a>
+                <a href="https://github.com/marcocanto">github</a>
+                <a href="https://linkedin.com/marcocanto3">linkedin</a>
             </div>
         </div>
     </div>
-    
 </body>
+
 </html>
