--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>startpage</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="output.css" />
+    <script src="script.js"></script>
 </head>
 
 <body>
     <div id="container">
-        <div id="image">
-            <img src="mountain-sketches-clip-art-7.png" width="300">
+        <div id="timeline">
+            <div id="currentTime"></div>
         </div>
         <div id="search-box">
             <form method="get" name="search" action="https://www.duckduckgo.com/"
                 onsubmit="this.submit(); this.reset(); return false;">
-                <input type="text" placeholder="Search DuckDuckGo" autofocus="autofocus" name="q" />
+                <input id="search" type="text" placeholder="Search DuckDuckGo" autofocus="autofocus" name="q" />
             </form>
         </div>
         <div id="link-container">
@@ -40,13 +41,6 @@
                 <a href="https://youtube.com">youtube</a>
                 <a href="https://twitch.tv/following">twitch</a>
                 <a href="https://reddit.com/r/superstonk">reddit</a>
-                <a href="https://linkedin.com/marcocanto3">linkedin</a>
-            </div>
-            <div class="links">
-                <div class="title">Productive</div>
-                <a href="https://leetcode.com/">leetcode</a>
-                <a href="https://freecodecamp.org">freecodecamp</a>
-                <a href="https://github.com/marcocanto">github</a>
                 <a href="https://linkedin.com/marcocanto3">linkedin</a>
             </div>
         </div>
