fixed seconds leading 0

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="container">
         <div id="timeline">
-            <div id="currentTime"></div>
+            <div id="currentTime">0:00:00</div>
         </div>
         <div id="search-box">
             <input id="search" type="text" autofocus name="q" />
@@ -22,7 +22,7 @@
             <div class="links">
                 <div class="title">Productive</div>
                 <a href="https://leetcode.com/">leetcode</a>
-                <a href="https://freecodecamp.org">freecodecamp</a>
+                <a href="https://theodingproject.org/">theodinproject</a>
                 <a href="https://github.com/marcocanto">github</a>
                 <a href="https://linkedin.com/marcocanto3">linkedin</a>
             </div>
