--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="links">
                 <div class="title">Productive</div>
                 <a href="https://leetcode.com/">leetcode</a>
-                <a href="https://theodingproject.org/">theodinproject</a>
+                <a href="https://www.theodinproject.com/paths/foundations/courses/foundations">theodinproject</a>
                 <a href="https://github.com/marcocanto">github</a>
                 <a href="https://linkedin.com/marcocanto3">linkedin</a>
             </div>
