style changes and added a weather query

--- a/index.html
+++ b/index.html
@@ -11,34 +11,42 @@
 </head>
 
 <body>
-    <div id="container">
-        <div id="timeline">
-            <div id="currentTime">0:00:00</div>
-        </div>
-        <div id="search-box">
-            <input id="search" type="text" autofocus name="q" />
-        </div>
-        <div id="link-container">
-            <div class="links">
-                <div class="title">Productive</div>
-                <a href="https://leetcode.com/">leetcode</a>
-                <a href="https://www.theodinproject.com/paths/foundations/courses/foundations">theodinproject</a>
-                <a href="https://github.com/marcocanto">github</a>
-                <a href="https://linkedin.com/marcocanto3">linkedin</a>
+    <div id="main">
+        <div id="container">
+            <div id=image-wrapper>
+                <img id=img src="imgs/waterfall.jpg" alt="waterfall image">
             </div>
-            <div class="links">
-                <div class="title">School</div>
-                <a href="https://canvas.eee.uci.edu/">canvas</a>
-                <a href="https://drive.google.com/">drive</a>
-                <a href="https://www.ics.uci.edu/~givargis/courses/cs145/">cs145</a>
-                <a href="https://www.ics.uci.edu/~wayne/courses/cs146/">cs146</a>
-            </div>
-            <div class="links">
-                <div class="title">Social</div>
-                <a href="https://youtube.com">youtube</a>
-                <a href="https://twitch.tv/following">twitch</a>
-                <a href="https://reddit.com/r/superstonk">reddit</a>
-                <a href="https://linkedin.com/marcocanto3">linkedin</a>
+            <div id='content-wrapper'>
+                <div id="timeline">
+                    <div id="currentTime">0:00:00</div>
+                </div>
+                <div id="search-box">
+                    <input id="search" type="text" autofocus name="q" />
+                </div>
+                <div id="link-container">
+                    <div class="links">
+                        <div class="title">Productive</div>
+                        <a href="https://leetcode.com/">leetcode</a>
+                        <a
+                            href="https://www.theodinproject.com/paths/foundations/courses/foundations">theodinproject</a>
+                        <a href="https://github.com/marcocanto">github</a>
+                        <a href="https://linkedin.com/marcocanto3">linkedin</a>
+                    </div>
+                    <div class="links">
+                        <div class="title">School</div>
+                        <a href="https://canvas.eee.uci.edu/">canvas</a>
+                        <a href="https://drive.google.com/">drive</a>
+                        <a href="https://www.ics.uci.edu/~givargis/courses/cs145/">cs145</a>
+                        <a href="https://www.ics.uci.edu/~wayne/courses/cs146/">cs146</a>
+                    </div>
+                    <div class="links">
+                        <div class="title">Social</div>
+                        <a href="https://youtube.com">youtube</a>
+                        <a href="https://twitch.tv/following">twitch</a>
+                        <a href="https://reddit.com/r/superstonk">reddit</a>
+                        <a href="https://linkedin.com/marcocanto3">linkedin</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
