--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </div>
             <div id='content-wrapper'>
                 <div id="timeline">
+                    <div id="currentDate">0:00:00</div>
                     <div id="currentTime">0:00:00</div>
                 </div>
                 <div id="search-box">
